overlays/dev/istio/mtls.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: dev
spec:
  mtls:
    mode: STRICT
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: storefront-ui-permissive
  namespace: dev
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: storefront-ui
  mtls:
    mode: PERMISSIVE
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: yas-metrics-permissive
  namespace: dev
spec:
  selector:
    matchLabels:
      app.kubernetes.io/part-of: yas
  portLevelMtls:
    "8090":
      mode: PERMISSIVE
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: backoffice-ui-permissive
  namespace: dev
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: backoffice-ui
  mtls:
    mode: PERMISSIVE
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: swagger-ui-permissive
  namespace: dev
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: swagger-ui
  mtls:
    mode: PERMISSIVE
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: nginx-api-gateway-permissive
  namespace: dev
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: nginx-api-gateway
  mtls:
    mode: PERMISSIVE
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: media-permissive
  namespace: dev
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: media
  mtls:
    mode: PERMISSIVE
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: storefront-bff-permissive
  namespace: dev
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: storefront-bff
  mtls:
    mode: PERMISSIVE
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: backoffice-bff-permissive
  namespace: dev
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: backoffice-bff
  mtls:
    mode: PERMISSIVE
