overlays/dev/istio/virtual-services.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: location
  namespace: dev
spec:
  hosts:
  - location
  - location.dev.svc.cluster.local
  http:
  - route:
    - destination:
        host: location
        port:
          number: 80
    retries:
      attempts: 3
      perTryTimeout: 2s
      retryOn: "5xx,connect-failure,refused-stream"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: tax
  namespace: dev
spec:
  hosts:
  - tax
  - tax.dev.svc.cluster.local
  http:
  - route:
    - destination:
        host: tax
        port:
          number: 80
    retries:
      attempts: 3
      perTryTimeout: 2s
      retryOn: "5xx,connect-failure,refused-stream"
