overlays/dev/istio/authorization-policies.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-cart-callers
  namespace: dev
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: cart
  action: ALLOW
  rules:
  - from:
    - source:
        principals:
        - cluster.local/ns/dev/sa/backoffice-bff
        - cluster.local/ns/dev/sa/storefront-bff
        - cluster.local/ns/dev/sa/order
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-customer-callers
  namespace: dev
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: customer
  action: ALLOW
  rules:
  - from:
    - source:
        principals:
        - cluster.local/ns/dev/sa/backoffice-bff
        - cluster.local/ns/dev/sa/storefront-bff
        - cluster.local/ns/dev/sa/order
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-inventory-callers
  namespace: dev
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: inventory
  action: ALLOW
  rules:
  - from:
    - source:
        principals:
        - cluster.local/ns/dev/sa/backoffice-bff
        - cluster.local/ns/dev/sa/storefront-bff
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-location-callers
  namespace: dev
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: location
  action: ALLOW
  rules:
  - from:
    - source:
        principals:
        - cluster.local/ns/dev/sa/backoffice-bff
        - cluster.local/ns/dev/sa/storefront-bff
        - cluster.local/ns/dev/sa/tax
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-media-callers
  namespace: dev
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: media
  action: ALLOW
  rules:
  - from:
    - source:
        principals:
        - cluster.local/ns/dev/sa/backoffice-bff
        - cluster.local/ns/dev/sa/storefront-bff
        - cluster.local/ns/dev/sa/product
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-order-callers
  namespace: dev
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: order
  action: ALLOW
  rules:
  - from:
    - source:
        principals:
        - cluster.local/ns/dev/sa/backoffice-bff
        - cluster.local/ns/dev/sa/storefront-bff
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-payment-callers
  namespace: dev
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: payment
  action: ALLOW
  rules:
  - from:
    - source:
        principals:
        - cluster.local/ns/dev/sa/backoffice-bff
        - cluster.local/ns/dev/sa/storefront-bff
        - cluster.local/ns/dev/sa/order
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-payment-paypal-callers
  namespace: dev
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: payment-paypal
  action: ALLOW
  rules:
  - from:
    - source:
        principals:
        - cluster.local/ns/dev/sa/backoffice-bff
        - cluster.local/ns/dev/sa/storefront-bff
        - cluster.local/ns/dev/sa/payment
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-product-callers
  namespace: dev
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: product
  action: ALLOW
  rules:
  - from:
    - source:
        principals:
        - cluster.local/ns/dev/sa/backoffice-bff
        - cluster.local/ns/dev/sa/storefront-bff
        - cluster.local/ns/dev/sa/order
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-search-callers
  namespace: dev
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: search
  action: ALLOW
  rules:
  - from:
    - source:
        principals:
        - cluster.local/ns/dev/sa/backoffice-bff
        - cluster.local/ns/dev/sa/storefront-bff
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-tax-callers
  namespace: dev
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: tax
  action: ALLOW
  rules:
  - from:
    - source:
        principals:
        - cluster.local/ns/dev/sa/backoffice-bff
        - cluster.local/ns/dev/sa/storefront-bff
        - cluster.local/ns/dev/sa/order
